--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,6 @@
   scroll-behavior: smooth;
 }
 
-body {
-  font-family: 'Archivo', sans-serif;
-}
+/* body { */
+  /* font-family: 'Archivo', sans-serif; */
+/* } */
